Created player character and added place-holder 2D sprite

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameName=Yugen1
 r.MobileHDR=False
 r.ForwardShading=True
 r.MinScreenRadiusForLights=0.000000
+r.RayTracing=False
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
