Add sphere collision - Expands with left mouse click. Currently in player blueprint, can be moved to a separate function if necessary. No collision currently.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,12 +8,12 @@ r.MinScreenRadiusForLights=0.000000
 r.RayTracing=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/Yugen/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+GameDefaultMap=/Game/Yugen/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
