--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,6 +84,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="ExpandGlow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftX)
++ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
++ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
