--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,11 +89,20 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftX)
 +ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
++ActionMappings=(ActionName="SoulSwap",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
++ActionMappings=(ActionName="MoveUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
++ActionMappings=(ActionName="MoveUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="MoveUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="MoveUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Down)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
