--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,11 @@ r.MobileHDR=False
 r.ForwardShading=True
 r.MinScreenRadiusForLights=0.000000
 r.RayTracing=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AntiAliasing=3
+r.CustomDepthTemporalAAJitter=False
+r.CustomDepth=0
+r.DefaultFeature.Bloom=False
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Yugen/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap
