Prep game for packaging

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Yugen/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap
+GameDefaultMap=/Game/Yugen/Maps/Level1.Level1
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
