Revert sprite material of background Change default editor map to Level1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ r.CustomDepth=0
 r.DefaultFeature.Bloom=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Yugen/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap
+EditorStartupMap=/Game/Yugen/Maps/Level1.Level1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
