Update project settings to enable volume management and level start

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,9 +18,10 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/Yugen/Maps/Level1.Level1
+GameDefaultMap=/Game/Yugen/Maps/MainMenu/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Yugen/YugenGameInstance.YugenGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
