--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -99,7 +99,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ExpandShortPulseGlow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="ExpandLongGlow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
 +ActionMappings=(ActionName="ExpandLongGlow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
-+ActionMappings=(ActionName="QuitGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="Pause Game",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
